# duplicate-files-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  collector.rs  exclusions.rs  filter.rs  main.rs
