[package]
name = "duplicate-files-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9", features = ["full"] }
clap = { version = "3.2.12", features = ["derive"] }
async-fs = "1.5.0"
async-recursion = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
rand = "0.8.5"
tempdir = "0.3.7"
